# inventory

./: .env.sample  .gitignore  Cargo.toml  Makefile  diesel.toml  run_tests.sh
migrations/2024-08-10-133004_create_items/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
tests/: integration_tests.rs
